--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,12 @@
+@import 'handsontable/dist/handsontable.full.min.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Menlo';
+    src: url('../fonts/menlo.ttf') format('truetype');
+}
 
 .navbar-element {
   @apply flex justify-center items-center;
